# discord-gateway

./: Cargo.toml  README.md
.devcontainer/rust/: devcontainer.json  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: cargo.yml
lib/broker/: Cargo.toml  README.md  build.rs
lib/broker/src/: lib.rs
lib/broker/src/amqp/: broker.rs  channel.rs  connection.rs  consumer.rs  exchange.rs  mod.rs  publisher.rs  queue.rs
lib/broker/src/proto/: mod.rs
proto/: gateway.proto
