[package]
name = "broker"
description = "Broker lib."
version = "0.1.0"
authors = ["Tristan <tristan@tnet.moe>"]
repository = "https://github.com/tnetmoe/discord-gateway"
edition = "2021"
license = "AGPL-3.0-only"
readme = "README.md"

[dependencies]
amqprs = "1.5.4"
anyhow = "1.0.79"
async-trait = "0.1.80"
env_logger = "0.11.3"
log = "0.4.20"
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }